--- a/login.html
+++ b/login.html
@@ -13,14 +13,17 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
+            <a href="/">
+                <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
+            </a>
         </div>
         <nav>
             <ul>
                 <li><a href="/">Inicio</a></li>
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li><a href="./escobas.html">Escobas</a></li>
-                <li><a href="./login.html">Iniciar sesion</a></li>
+                <li class="selected"><a href="./login.html">Iniciar sesion</a></li>
+                <li><a href="./carrito.html">🛒</a></li>
             </ul>
         </nav>
     </header>
