--- a/index.html
+++ b/index.html
@@ -27,28 +27,149 @@
         </nav>
     </header>
     <main>
-        <h1>Bienvenido al Callejon Diagon</h1>
-        <div>
-            <p>En nuestra web podras encontrar los mejores productos para tu experiencia en el Mundo Magico, nuevos y usados.
-                <br>
-            Los ultimos modelos y las mejores gangas en <b>Callejon Diagon</b>
-            </p>
+        <div class="bienvenido">
+            <div class="bienvenidoTexto">
+                <h1>Bienvenido al Callejon Diagon</h1>
+                <div>
+                    <p>En nuestra web podras encontrar los mejores productos para tu experiencia en el Mundo Magico, nuevos y usados.  Los ultimos modelos y las mejores gangas en <b>Callejon Diagon</b>
+                    </p>
+                </div>
+            </div>
+            <div class="bienvenidoImagen">
+<!-- no me funcionó correctamente                 <img src="./img/flooPowderChimney.jpg" alt="Chimenea para Polvos Floo" class="vertical">
+ -->                <img src="./img/diagonAlleyEntry.jpg" alt="Entrada de ladrillo del Callejon Diagon" class="horizontal">
+            </div>
         </div>
         <div>
             <h2>Recomendados para ti</h2>
             <!-- Carrusel con productos random -->
+            <div class="carrusel">
+                <div class="botonCarrusel">
+                    <button width="77px" height="80px">⮜</button>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                    <h3>Nimbus 2001</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                    <h3>Varita de Sauco</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                    <h3>Varita Endrino</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                    <h3>Cometa 260</h3>
+                </div>
+                <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2000 </h3>
+                </div>
+                <div class="botonCarrusel">
+                    <button class="botonCarrusel">⮞</button>
+                </div>
+            </div>
         </div>
+        <br><br>
         <div>
             <h2>Mejor puntuados</h2>
             <!-- Carrusel con los mejor puntuados -->
+            <div class="carrusel">
+                <div class="botonCarrusel">
+                    <button width="77px" height="80px">⮜</button>
+                </div>
+                <div class="card">
+                    <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                    <h3>Varita de Sauco</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                    <h3>Nimbus 2001</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                    <h3>Nimbus 2000 </h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                    <h3>Barredora 5</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                    <h3>Varita Alenix</h3>
+                </div>
+                <div class="botonCarrusel">
+                    <button class="botonCarrusel">⮞</button>
+                </div>
+            </div>
         </div>
+        <br><br>
         <div>
             <h2>Lo ultimo en Varitas</h2>
             <!-- Carrusel con los últimos agregados a varitas (numero de ID más alto)-->
+            <div class="carrusel">
+                <div class="botonCarrusel">
+                    <button width="77px" height="80px">⮜</button>
+                </div>
+                <div class="card">
+                    <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                    <h3>Varita de Sauco</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                    <h3>Varita Nogon</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                    <h3>Varita Endrino</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                    <h3>Varita Friggory</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                    <h3>Varita Alenix</h3>
+                </div>
+                <div class="botonCarrusel">
+                    <button class="botonCarrusel">⮞</button>
+                </div>
+            </div>
         </div>
+        <br><br>
         <div>
             <h2>Lo ultimo en Escobas</h2>
             <!-- Carrusel con los últimos agregados a escobas (numero de ID más alto)-->
+            <div class="carrusel">
+                <div class="botonCarrusel">
+                    <button width="77px" height="80px">⮜</button>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                    <h3>Barredora 5</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                    <h3>Cometa 260</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                    <h3>Nimbus 2000 </h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                    <h3>Saeta de Fuego</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                    <h3>Nimbus 2001</h3>
+                </div>
+                <div class="botonCarrusel">
+                    <button class="botonCarrusel">⮞</button>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
