creo el archivo para js, no modifiqué nada

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <!-- Carrusel con los últimos agregados a escobas (numero de ID más alto)-->
         </div>
     </main>
+
+    <script src="./js/florenciamorelli.js"></script>
+    
     <footer>
         Derechos reservados
     </footer>
