--- a/login.html
+++ b/login.html
@@ -30,6 +30,9 @@
     <main>
         <!-- Formulario -->
     </main>
+
+    <script src="./js/florenciamorelli.js"></script>
+
     <footer>
 
     </footer>
