--- a/escobas.html
+++ b/escobas.html
@@ -39,6 +39,9 @@
         <h2>Sauce</h2>
         <!-- carrusel -->
     </main>
+
+    <script src="./js/florenciamorelli.js"></script>
+
     <footer>
 
     </footer>
