corregí cantidad de cards y padding

--- a/escobas.html
+++ b/escobas.html
@@ -48,6 +48,10 @@
                 <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                 <h3>Nimbus 2001</h3>
             </div>
+            <div class="card">
+                <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                <h3>Nimbus 2003</h3>
+            </div>
             <div class="botonCarrusel">
                 <button class="botonCarrusel">⮞</button>
             </div>
@@ -62,10 +66,6 @@
             <div class="card">
                 <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                 <h3>Cometa 140</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
-                <h3>Cometa 180</h3>
             </div>
             <div class="card">
                 <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
