dejando 10 puntos los carruseles, listo para repl

--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
         </div>
         <div>
             <h2>Recomendados para ti</h2>
-            <!-- Carrusel con productos random -->
             <div class="carrusel">
-                <div class="botonCarrusel">
-                    <button width="77px" height="80px">⮜</button>
-                </div>
+                <button class="carrusel-boton carrusel-anterior">⮜</button>
+            <div class="carrusel-contenedor">
                 <div class="card">
                     <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
                     <h3>Nimbus 2001</h3>
@@ -64,119 +62,197 @@
                     <h3>Cometa 260</h3>
                 </div>
                 <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                        <h3>Nimbus 2000 </h3>
+                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                    <h3>Nimbus 2000</h3>
                 </div>
-                <div class="botonCarrusel">
-                    <button class="botonCarrusel">⮞</button>
+                <div class="card">
+                    <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                    <h3>Nimbus 2001</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                    <h3>Nimbus 2000</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                    <h3>Varita Endrino</h3>
+                </div>
+                <div class="card">
+                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                    <h3>Nimbus 2000</h3>
                 </div>
             </div>
+                <button class="carrusel-boton carrusel-siguiente">⮞</button>
+            </div>
         </div>
-        <br><br>
+        <br>
         <div>
             <h2>Mejor puntuados</h2>
-            <!-- Carrusel con los mejor puntuados -->
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button width="77px" height="80px">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior">⮜</button>
                 </div>
-                <div class="card">
-                    <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
-                    <h3>Varita de Sauco</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
-                    <h3>Nimbus 2001</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                    <h3>Nimbus 2000 </h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
-                    <h3>Barredora 5</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
-                    <h3>Varita Alenix</h3>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Barredora 5</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Barredora 5</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="botonCarrusel">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
                 </div>
             </div>
-        </div>
-        <br><br>
+        </div>        
+        <br>
         <div>
-            <h2>Lo ultimo en Varitas</h2>
-            <!-- Carrusel con los últimos agregados a varitas (numero de ID más alto)-->
+            <h2>Lo último en Varitas</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button width="77px" height="80px">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior">⮜</button>
                 </div>
-                <div class="card">
-                    <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
-                    <h3>Varita de Sauco</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
-                    <h3>Varita Nogon</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
-                    <h3>Varita Endrino</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
-                    <h3>Varita Friggory</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
-                    <h3>Varita Alenix</h3>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <h3>Varita Nogon</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <h3>Varita Friggory</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <h3>Varita Alenix</h3>
+                    </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="botonCarrusel">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
                 </div>
             </div>
-        </div>
-        <br><br>
+        </div>        
+        <br>
         <div>
-            <h2>Lo ultimo en Escobas</h2>
-            <!-- Carrusel con los últimos agregados a escobas (numero de ID más alto)-->
+            <h2>Lo último en Escobas</h2>
             <div class="carrusel">
                 <div class="botonCarrusel">
-                    <button width="77px" height="80px">⮜</button>
+                    <button class="carrusel-boton carrusel-anterior">⮜</button>
                 </div>
-                <div class="card">
-                    <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
-                    <h3>Barredora 5</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
-                    <h3>Cometa 260</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                    <h3>Nimbus 2000 </h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
-                    <h3>Saeta de Fuego</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
-                    <h3>Nimbus 2001</h3>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Barredora 5</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Saeta de Fuego</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Barredora 5</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Saeta de Fuego</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
                 </div>
                 <div class="botonCarrusel">
-                    <button class="botonCarrusel">⮞</button>
+                    <button class="carrusel-boton carrusel-siguiente">⮞</button>
                 </div>
             </div>
-        </div>
+        </div>        
     </main>
 
     <script src="./js/florenciamorelli.js"></script>
     
     <footer>
-        Derechos reservados
+        Derechos reservados © Florencia Morelli 2023
     </footer>
 </body>
 </html>
