barra de búsqueda, vemos si queda o no

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <div>
                     <p>En nuestra web podras encontrar los mejores productos para tu experiencia en el Mundo Magico, nuevos y usados.  Los ultimos modelos y las mejores gangas en <b>Callejon Diagon</b>
                     </p>
+                    <div class="search-container">
+                        <input type="text" id="search-input" placeholder="Buscar en el Callejon Diagon">
+                        <span class="search-icon"></span>
+                    </div>
+                    
                 </div>
             </div>
             <div class="bienvenidoImagen">
