carruseles de escobas ok

--- a/escobas.html
+++ b/escobas.html
@@ -28,121 +28,276 @@
         </nav>
     </header>
     <main>
-        <!-- <h1>Escobas</h1> -->
-        <!-- imagen de escobas -->
-        <h2>Nimbus</h2>
-        <!-- carrusel -->
-        <div class="carrusel">
-            <div class="botonCarrusel">
-                <button width="77px" height="80px">⮜</button>
+        <div>
+            <h2>Nimbus</h2>
+            <div class="carrusel">
+                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2003</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2003</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2003</h3>
+                    </div>
+                </div>
+                <button class="carrusel-boton carrusel-siguiente">⮞</button>
             </div>
-            <div class="card">
-                <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
-                <h3>Nimbus 1000</h3>
+        </div>    
+        <br>
+        <div>
+            <h2>Cometas</h2>
+            <div class="carrusel">
+                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Cometa 140</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Cometa 280</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Cometa 290</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Cometa 140</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Cometa 280</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Cometa 290</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Cometa 140</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Cometa 280</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Cometa 290</h3>
+                    </div>
+                </div>
+                <button class="carrusel-boton carrusel-siguiente">⮞</button>
             </div>
-            <div class="card">
-                <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
-                <h3>Nimbus 2000</h3>
+        </div>                
+        <br>
+        <div>
+            <h2>Roble</h2>
+            <div class="carrusel">
+                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Cometa 180</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Cometa 290</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Cometa 180</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Cometa 290</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Cometa 180</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Cometa 290</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Cometa 180</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Cometa 290</h3>
+                    </div>
+                </div>
+                <button class="carrusel-boton carrusel-siguiente">⮞</button>
             </div>
-            <div class="card">
-                <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                <h3>Nimbus 2001</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
-                <h3>Nimbus 2003</h3>
-            </div>
-            <div class="botonCarrusel">
-                <button class="botonCarrusel">⮞</button>
+        </div>        
+        <br>
+        <div>
+            <h2>Sauce</h2>
+            <div class="carrusel">
+                <button class="carrusel-boton carrusel-anterior">⮜</button>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Cometa 180</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Cometa 180</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Cometa 180</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <h3>Nimbus 1000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <h3>Cometa 180</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                </div>
+                <button class="carrusel-boton carrusel-siguiente">⮞</button>
             </div>
         </div>
-        <br><br>
-        <h2>Cometas</h2>
-        <!-- carrusel -->
-        <div class="carrusel">
-            <div class="botonCarrusel">
-                <button width="77px" height="80px">⮜</button>
-            </div>
-            <div class="card">
-                <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                <h3>Cometa 140</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
-                <h3>Cometa 280</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
-                <h3>Cometa 260</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
-                <h3>Cometa 290</h3>
-            </div>
-            <div class="botonCarrusel">
-                <button class="botonCarrusel">⮞</button>
-            </div>
-        </div>
-        <br><br>
-        <h2>Roble</h2>
-        <!-- carrusel -->
-        <div class="carrusel">
-            <div class="botonCarrusel">
-                <button width="77px" height="80px">⮜</button>
-            </div>
-            <div class="card">
-                <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
-                <h3>Nimbus 1000</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
-                <h3>Cometa 180</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                <h3>Nimbus 2001</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
-                <h3>Cometa 290</h3>
-            </div>
-            <div class="botonCarrusel">
-                <button class="botonCarrusel">⮞</button>
-            </div>
-        </div>
-        <br><br>
-        <h2>Sauce</h2>
-        <!-- carrusel -->
-        <div class="carrusel">
-            <div class="botonCarrusel">
-                <button width="77px" height="80px">⮜</button>
-            </div>
-            <div class="card">
-                <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
-                <h3>Nimbus 1000</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
-                <h3>Cometa 180</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
-                <h3>Nimbus 2000</h3>
-            </div>
-            <div class="card">
-                <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
-                <h3>Cometa 260</h3>
-            </div>
-            <div class="botonCarrusel">
-                <button class="botonCarrusel">⮞</button>
-            </div>
-        </div>
+        
     </main>
 
     <script src="./js/florenciamorelli.js"></script>
 
     <footer>
-
+        Derechos reservados © Florencia Morelli 2023
     </footer>
 </body>
 </html>
